welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:21: error: ';' expected but 'while' found.
poseBiscuit()while(!estSurBiscuit){
             ^Balin:30: error: ';' expected but 'while' found.
poseBiscuit()while(!estSurBiscuit){
             ^